2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/libxfce4menu.h, libxfce4menu/Makefile.am, 
	  libxfce4menu/xfce-menu-element.{c,h}: XfceMenuElement 
	  interface with methods xfce_menu_element_get_name() and 
	  xfce_menu_element_get_icon_name() added. 
	* libxfce4menu/xfce-menu.c, libxfce4menu/xfce-menu-item.c, 
	  libxfce4menu/xfce-menu-separator.c: Add XfceMenuElementIface
	  to XfceMenu, XfceMenuItem and XfceMenuSeparator. Rename
	  xfce_menu_get_layout_items() to 
	  xfce_menu_get_layout_elements().
	* tests/test-display-menu.c: Use XfceMenuElement methods
	  where possible.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* tests/Makefile.am, tests/test-display-menu.c: Test program
	  for displaying a menu added again.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* docs/reference/tmpl/: Remove tdb related files from
	  SVN. They won't be installed to the system anyway.
	* tests/Makefile.am, tests/test-menu-spec.c: Test program for
	  the menu specification test suite added again.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/libxfce4menu-0.1.pc.in: Update pkg-config
	  information to point to the new header file location.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4menu/Makefile.am: Install header files to 
	  $includedir/xfce4/libxfce4menu-<version>/libxfce4menu/.

2007-03-23	Jannis Pohlmann <jannis@xfce.org>

	* Move to libxfce4menu. 

2007-03-21	Jannis Pohlmann <jannis@xfce.org>

	* frap-menu-item.{c,h}: Improve set methods a little. Add 
	  support for TryExec as requested by Brian.

2007-03-20	Jannis Pohlmann <jannis@xfce.org>

	* frap-menu.c: Fix several memory leaks, among them a huge
	  310k bomb. You don't believe me? Well, see 
	  http://rafb.net/p/WPbFZy97.html for the numbers. All
	  menus (except the root menu) were ref'd twice and thus, their
	  data never got free'd anywhere.

2007-03-19	Jannis Pohlmann <jannis@xfce.org>

	* frap-menu.c: Initialize threading before anything else - this