@@ -1,0 +1,8 @@
+<!-- ##### FUNCTION xfce_menu_get_layout_items ##### -->
+<para>
+
+</para>
+
+@menu: 
+@Returns: 
+
