@@ -277,12 +277,3 @@ xfce-menu
 @Returns: 
 
 
-<!-- ##### FUNCTION xfce_menu_get_layout_items ##### -->
-<para>
-
-</para>
-
-@menu: 
-@Returns: 
-
-
