@@ -1,1 +1,5 @@
-
+2007-03-23	Jannis Pohlmann <jannis@xfce.org>
+	
+	* POTFILES.in: Add source files.
+	* de.po, libxfce4menu-0.1.pot, LINGUAS: Add POT file and 
+	  initial German translations.
